--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
-<HTML>
-<HEAD>
-<TITLE>Andy B Goode - Rock and Roll Vocalist</TITLE>
-</HEAD>
-<H1>Andy B Goode</H1>
-<H2>Rock and Roll Vocalist</H2>
-<P>Web site coming soon</P>
-</HTML>
+<html>
+<head>
+<title>Andy B Goode - Rock and Roll Vocalist</title>
+</head>
+<h1>Andy B Goode</h1>
+<h2>Rock and Roll Vocalist</h2>
+<p>Web site coming soon</p>
+<a href="photos.html">Photos</a>
+</html>
