--- a/index.html
+++ b/index.html
@@ -5,5 +5,8 @@
 <h1>Andy B Goode</h1>
 <h2>Rock and Roll Vocalist</h2>
 <p>Web site coming soon</p>
-<a href="photos.html">Photos</a>
+<a href="photos.html">Photos</a> 
+<a href="contact.html">Contacts</a> 
+<a href="terms.html">Terms</a>
+
 </html>
