--- a/index.html
+++ b/index.html
@@ -1,12 +1,24 @@
 <html>
+  
 <head>
 <title>Andy B Goode - Rock and Roll Vocalist</title>
 </head>
-<h1>Andy B Goode</h1>
-<h2>Rock and Roll Vocalist</h2>
-<p>Web site coming soon</p>
+
+<body>
+<a href="about.html">About</a> 
+<a href="bio.html">Bio</a> 
+<a href="contact.html">Contact</a> 
 <a href="photos.html">Photos</a> 
-<a href="contact.html">Contacts</a> 
+<a href="video.html">Videos</a> 
+<a href="social.html">Social</a> 
+<a href="testimonials.html">Testimonials</a> 
 <a href="terms.html">Terms</a>
+
+<h1>Andy B Goode</h1>
+<h2>1950s/60s Rock and Roll Vocalist</h2>
+<h2>Available for enliven your events</h2>
+<h3>Based in Tamworth, Staffordshire, UK</h3>
+<p>Full Web site coming soon</p>
+</body>
 
 </html>
