--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 
 <h1>Andy B Goode</h1>
 <h2>1950s/60s Rock and Roll Vocalist</h2>
-<h2>Available for enliven your events</h2>
+<h2>Let me enliven your events with some vintage 'Rock n Roll' singing.</h2>
 <h3>Based in Tamworth, Staffordshire, UK</h3>
-<p>Full Web site coming soon</p>
+<p>Full Web site coming soon..... please return soon.</p>
 </body>
 
 </html>
