--- a/index.html
+++ b/index.html
@@ -5,18 +5,20 @@
 </head>
 
 <body>
+<a href="index.html">Home</a> 
 <a href="about.html">About</a> 
-<a href="bio.html">Bio</a> 
 <a href="contact.html">Contact</a> 
+<a href="bio.html">Bio</a> 
 <a href="photos.html">Photos</a> 
 <a href="video.html">Videos</a> 
 <a href="social.html">Social</a> 
 <a href="testimonials.html">Testimonials</a> 
+<a href="thanks.html">Thanks</a>
 <a href="terms.html">Terms</a>
 
 <h1>Andy B Goode</h1>
 <h2>1950s/60s Rock and Roll Vocalist</h2>
-<h2>Let me enliven your events with some vintage 'Rock n Roll' singing.</h2>
+<h2>Let me enliven your events with some fun vintage 'Rock n Roll' music.</h2>
 <h3>Based in Tamworth, Staffordshire, UK</h3>
 <p>Full Web site coming soon..... please return soon.</p>
 </body>
