--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <h2>1950s/60s Rock and Roll Vocalist</h2>
 <h2>Let me enliven your events with some fun vintage 'Rock n Roll' music.</h2>
 <h3>Based in Tamworth, Staffordshire, UK</h3>
-<p>Full Web site coming soon..... please return soon.</p>
+<p>Full Web site coming soon..... please come back.</p>
 </body>
 
 </html>
