--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   
 <head>
 <title>Andy B Goode - Rock and Roll Vocalist</title>
+<link rel="stylesheet" type="text/css" href="main.css">
 </head>
 
 <body>
