--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
   
 <head>
 <title>Andy B Goode - Rock and Roll Vocalist</title>
-<link rel="stylesheet" type="text/css" href="main.css">
+<link rel="stylesheet" type="text/css" href="style.css"/>
+ <meta name="short" content="AndyBGoode 1950s/60 Rock n Roll Entertainer"/>
 </head>
 
 <body>
