--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
 <h2>Let me enliven your events with some fun vintage 'Rock n Roll' music.</h2>
 <h3>Based in Tamworth, Staffordshire, UK</h3>
 <p>Full Web site coming soon..... please come back.</p>
+
+<iframe src="https://www.facebook.com/plugins/follow.php?href=https%3A%2F%2Fwww.facebook.com%2FAndyBGoode&width=450&height=80&layout=standard&show_faces=true&appId" width="450" height="80" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+
 </body>
 
 </html>
