--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>Andy B Goode - Rock and Roll Vocalist</title>
 <link rel="stylesheet" type="text/css" href="style.css"/>
- <meta name="short" content="AndyBGoode 1950s/60 Rock n Roll Entertainer"/>
+<meta name="short" content="AndyBGoode 1950s/60 Rock n Roll Entertainer"/>
 </head>
 
 <body>
@@ -25,6 +25,8 @@
 <p>Full Web site coming soon..... please come back.</p>
 
 <iframe src="https://www.facebook.com/plugins/follow.php?href=https%3A%2F%2Fwww.facebook.com%2FAndyBGoode&width=450&height=80&layout=standard&show_faces=true&appId" width="450" height="80" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+<a href="https://twitter.com/AndyBVocalist" class="twitter-follow-button" data-show-count="false" data-dnt="true">Follow @AndyBVocalist</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 
 </body>
 
