--- a/index.html
+++ b/index.html
@@ -7,16 +7,20 @@
 </head>
 
 <body>
+  
+<div id="banner">
+<a href="index.html"><img id="logo" src="logo.gif" alt="AndyBGoode"/></a>
+</div>
+
+<div id="menu">
 <a href="index.html">Home</a> 
-<a href="about.html">About</a> 
-<a href="contact.html">Contact</a> 
-<a href="bio.html">Bio</a> 
-<a href="photos.html">Photos</a> 
+<a href="info.html">Info</a> 
+<a href="photos.html">Photos</a>
+<a href="music.html">Music</a> 
 <a href="video.html">Videos</a> 
-<a href="social.html">Social</a> 
-<a href="testimonials.html">Testimonials</a> 
-<a href="thanks.html">Thanks</a>
+<a href="contact.html">Contact</a>
 <a href="terms.html">Terms</a>
+</div>
 
 <h1>Andy B Goode</h1>
 <h2>1950s/60s Rock and Roll Vocalist</h2>
@@ -24,10 +28,11 @@
 <h3>Based in Tamworth, Staffordshire, UK</h3>
 <p>Full Web site coming soon..... please come back.</p>
 
+<div id="social">
 <iframe src="https://www.facebook.com/plugins/follow.php?href=https%3A%2F%2Fwww.facebook.com%2FAndyBGoode&width=450&height=80&layout=standard&show_faces=true&appId" width="450" height="80" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
 <a href="https://twitter.com/AndyBVocalist" class="twitter-follow-button" data-show-count="false" data-show-screen-name="false" data-dnt="true">Follow @AndyBVocalist</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
-<h1>Andy B Goode</h1>
+</div>
 
 </body>
 
