--- a/index.html
+++ b/index.html
@@ -28,6 +28,13 @@
 <h3>Based in Tamworth, Staffordshire, UK</h3>
 <p>Full Web site coming soon..... please come back.</p>
 
+<div id="gigs">
+<ul>
+<li>gig info 1</li>
+<li>gig info 2</li>
+</ul>
+</div>
+
 <div id="social">
 <iframe src="https://www.facebook.com/plugins/follow.php?href=https%3A%2F%2Fwww.facebook.com%2FAndyBGoode&width=450&height=80&layout=standard&show_faces=true&appId" width="450" height="80" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
 <a href="https://twitter.com/AndyBVocalist" class="twitter-follow-button" data-show-count="false" data-show-screen-name="false" data-dnt="true">Follow @AndyBVocalist</a>
