--- a/index.html
+++ b/index.html
@@ -23,19 +23,20 @@
 </div>
 
 <h1>Andy B Goode</h1>
-<h2>1950s/60s Rock and Roll Vocalist</h2>
-<h2>Let me enliven your events with some fun vintage 'Rock n Roll' music.</h2>
+<h3>1950s/60s Rock and Roll Vocalist</h3>
+<h3>Let me enliven your events with some fun vintage 'Rock n Roll' music.</h3>
 <h3>Based in Tamworth, Staffordshire, UK</h3>
 <p>Full Web site coming soon..... please come back.</p>
 
 <div id="gigs">
+<h2>Key Upcoming Gigs</h2>
 <ul>
-<li>gig info 1</li>
-<li>gig info 2</li>
+<li>Saturday 11th June 2016 - 2pm - St Pauls Dosthill - Vintage Fayre</li>
 </ul>
 </div>
 
 <div id="social">
+<h2>Social Links</h2>
 <iframe src="https://www.facebook.com/plugins/follow.php?href=https%3A%2F%2Fwww.facebook.com%2FAndyBGoode&width=450&height=80&layout=standard&show_faces=true&appId" width="450" height="80" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
 <a href="https://twitter.com/AndyBVocalist" class="twitter-follow-button" data-show-count="false" data-show-screen-name="false" data-dnt="true">Follow @AndyBVocalist</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
