--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   
 <div id="banner">
-<a href="index.html"><img id="logo" src="logo.gif" alt="AndyBGoode"/></a>
+<a href="index.html"><img id="logo" src="logo.gif" alt="AndyBGoode Logo"/></a>
 </div>
 
 <div id="menu">
