--- a/index.html
+++ b/index.html
@@ -25,8 +25,19 @@
 <h1>Andy B Goode</h1>
 <h3>1950s/60s Rock and Roll Vocalist</h3>
 <h3>Let me enliven your events with some fun vintage 'Rock n Roll' music.</h3>
-<h3>Based in Tamworth, Staffordshire, UK</h3>
-<p>Full Web site coming soon..... please come back.</p>
+<h3>Get your feet moving on the dance floor to some Rock n Roll classics.</h3>
+<p>Full Web site coming soon..... please return later.</p>
+
+<div id="info">
+<h2>What Do I Do?</h2>
+<ul>
+<li>Rock n Roll Vocalist</li>
+<li>I only use professional quality backing tracks</li>
+<li>Based in Tamworth, Staffordshire, UK</li>
+<li>PA Provided</li>
+<li>I include hits by: Chuck Berry, Bill Haley and his Comets, Elvis, Everley Brothers, etc..</li>
+</ul>
+</div>
 
 <div id="gigs">
 <h2>Key Upcoming Gigs</h2>
