--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <li>I only use professional quality backing tracks</li>
 <li>Based in Tamworth, Staffordshire, UK</li>
 <li>PA Provided</li>
-<li>I include hits by: Chuck Berry, Bill Haley and his Comets, Elvis, Everley Brothers, etc..</li>
+<li>Include hits by: Chuck Berry, Bill Haley and his Comets, Eddie Cochran, Elvis, Danny and the Juniors, Everley Brothers, Johnny Tillotson, The Pengiuns, Buddy Holly and many more.</li>
 </ul>
 </div>
 
