--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 <body>
   
 <div id="banner">
-<a href="index.html"><img id="logo" src="logo.gif" alt="AndyBGoode Logo"/></a>
+<a href="index.html"><img id="banner" src="banner01.gif" alt="AndyBGoode Banner"/></a>
+</div>
+<div id="logo">
+<a href="index.html"><img id="logo" src="logo01.gif" alt="AndyBGoode Logo"/></a>
 </div>
 
 <div id="menu">
