--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
 
 <div id="menu">
 <a href="index.html">Home</a> 
-<a href="info.html">Info</a> 
 <a href="photos.html">Photos</a>
 <a href="music.html">Music</a> 
 <a href="video.html">Videos</a> 
@@ -34,16 +33,25 @@
 <div id="info">
 <h2>What Do I Do?</h2>
 <ul>
-<li>Rock n Roll Vocalist</li>
+<li>Friendly Rock n Roll Singer</li>
+<li>I am to let you dance the night away</li>
 <li>I only use professional quality backing tracks</li>
 <li>Based in Tamworth, Staffordshire, UK</li>
-<li>PA Provided</li>
 <li>Include hits by: Chuck Berry, Bill Haley and his Comets, Eddie Cochran, Elvis, Danny and the Juniors, Everley Brothers, Johnny Tillotson, The Pengiuns, Buddy Holly and many more.</li>
+<li>PA Provided</li>
+</ul>
+</div>
+
+<div id="news">
+<h2>News</h2>
+<ul>
+<li>Discount pricing for 2015</li>
+<li>I am providing a few free gigs to worthy causes this year (Hospices, Care Homes, etc) so inquire soon</li>
 </ul>
 </div>
 
 <div id="gigs">
-<h2>Key Upcoming Gigs</h2>
+<h2>Key Upcoming Public Gigs</h2>
 <ul>
 <li>Saturday 11th June 2016 - 2pm - St Pauls Dosthill - Vintage Fayre</li>
 </ul>
@@ -52,7 +60,7 @@
 <div id="social">
 <h2>Social Links</h2>
 <iframe src="https://www.facebook.com/plugins/follow.php?href=https%3A%2F%2Fwww.facebook.com%2FAndyBGoode&width=450&height=80&layout=standard&show_faces=true&appId" width="450" height="80" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
-<a href="https://twitter.com/AndyBVocalist" class="twitter-follow-button" data-show-count="false" data-show-screen-name="false" data-dnt="true">Follow @AndyBVocalist</a>
+<a href="https://twitter.com/AndyBVocalist" class="twitter-follow-button" data-show-count="false" data-dnt="true">Follow @AndyBVocalist</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 </div>
 
