--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 <div id="news">
 <h2>News</h2>
 <ul>
-<li>Discount pricing for 2015</li>
-<li>I am providing a few free gigs to worthy causes this year (Hospices, Care Homes, etc) so inquire soon</li>
+<li>Discount pricing for 2015 continues.</li>
+<li>I am providing a few free gigs to worthy causes this year (Hospices, Care Homes, etc) so inquire soon if you represent a organisation that may enjoy me entertaining them.</li>
 </ul>
 </div>
 
