--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 <body>
 
+
 <div id="menu">
 <a href="index.html">Home</a> 
 <a href="photos.html">Photos</a>
@@ -17,6 +18,7 @@
 <a href="terms.html">Terms</a>
 </div>
 
+<div id="main">
 <h1>Andy B Goode</h1>
 <h3>1950s/60s Rock and Roll Vocalist</h3>
 <h3>Let me enliven your events with some fun vintage 'Rock n Roll' music.</h3>
@@ -57,6 +59,7 @@
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 </div>
 
+</div>
 </body>
 
 </html>
