--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 
 <div id="menu">
-<a href="index.html">Home</a> 
+<a href="index.html"><img id="logo" src="logo01.gif" alt="AndyBGoode Logo"/></a>
 <a href="photos.html">Photos</a>
 <a href="music.html">Music</a> 
 <a href="video.html">Videos</a> 
