--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 
 <div id="menu">
-<a href="index.html"><img id="logo" src="logo01.gif" alt="AndyBGoode Logo"/></a>
+<a href="index.html"><img id="logo" src="logo01.gif" alt="AndyBGoode Logo" height="40px"></a>
 <a href="photos.html">Photos</a>
 <a href="music.html">Music</a> 
 <a href="video.html">Videos</a> 
@@ -23,16 +23,16 @@
 <h3>1950s/60s Rock and Roll Vocalist</h3>
 <h3>Let me enliven your events with some fun vintage 'Rock n Roll' music.</h3>
 <h3>Get your feet moving on the dance floor to some Rock n Roll classics.</h3>
-<p>Full Web site coming soon..... please return later.</p>
+
 
 <div id="info">
 <h2>What Do I Do?</h2>
 <ul>
 <li>Friendly Rock n Roll Singer</li>
-<li>I am to let you dance the night away</li>
+<li>I am to let you dance the night away to those classic songs.</li>
 <li>I only use professional quality backing tracks</li>
 <li>Based in Tamworth, Staffordshire, UK</li>
-<li>Include hits by: Chuck Berry, Bill Haley and his Comets, Eddie Cochran, Elvis, Danny and the Juniors, Everley Brothers, Johnny Tillotson, The Pengiuns, Buddy Holly and many more.</li>
+<li>Epic hits by: Chuck Berry, Bill Haley and his Comets, Eddie Cochran, Elvis, Danny and the Juniors, Everley Brothers, Johnny Tillotson, The Pengiuns, Buddy Holly and many more.</li>
 <li>PA Provided</li>
 </ul>
 </div>
