--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
-  
+<!--
+ Copyright (C) 2016 Andrew Brittons.
+ All rights reserved
+ -->
 <head>
 <title>Andy B Goode - Rock and Roll Vocalist</title>
 <link rel="stylesheet" type="text/css" href="style.css"/>
@@ -22,25 +25,26 @@
 <h1>Andy B Goode</h1>
 <h3>1950s/60s Rock and Roll Vocalist</h3>
 <h3>Let me enliven your events with some fun vintage 'Rock n Roll' music.</h3>
-<h3>Get your feet moving on the dance floor to some Rock n Roll classics.</h3>
+<h3>Get your feet moving on the dance floor to some vintage 'Rock n Roll' classics.</h3>
 
 
 <div id="info">
 <h2>What Do I Do?</h2>
 <ul>
-<li>Friendly Rock n Roll Singer</li>
-<li>I am to let you dance the night away to those classic songs.</li>
+<li>Dynamic Rock n Roll Singer</li>
+<li>I am to let you Jive the night away to those classic songs.</li>
 <li>I only use professional quality backing tracks</li>
 <li>Based in Tamworth, Staffordshire, UK</li>
 <li>Epic hits by: Chuck Berry, Bill Haley and his Comets, Eddie Cochran, Elvis, Danny and the Juniors, Everley Brothers, Johnny Tillotson, The Pengiuns, Buddy Holly and many more.</li>
 <li>PA Provided</li>
+<li>Available for: Birthdays, Fetes, Fayres, Church Events, Parties, Dances, OAP Homes, Care Homes, Hospices, etc...</li>
 </ul>
 </div>
 
 <div id="news">
 <h2>News</h2>
 <ul>
-<li>Discount pricing for 2015 continues.</li>
+<li>Discount pricing for 2016 continues.</li>
 <li>I am providing a few free gigs to worthy causes this year (Hospices, Care Homes, etc) so inquire soon if you represent a organisation that may enjoy me entertaining them.</li>
 </ul>
 </div>
