--- a/index.html
+++ b/index.html
@@ -58,6 +58,12 @@
 
 <div id="social">
 <h2>Social Links</h2>
+<ul>
+<li>Facebook: www.facebook.com/AndyBGoode</li>
+<li>Twitter: @AndyBVocalist</li>
+<li>YouTube: https://www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ</li>
+<li>Instagram: https://www.instagram.com/andybgoodevocalist</li>
+</ul>
 <iframe src="https://www.facebook.com/plugins/follow.php?href=https%3A%2F%2Fwww.facebook.com%2FAndyBGoode&width=450&height=80&layout=standard&show_faces=true&appId" width="450" height="80" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
 <a href="https://twitter.com/AndyBVocalist" class="twitter-follow-button" data-show-count="false" data-dnt="true">Follow @AndyBVocalist</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
