--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
 <h2>What Do I Do?</h2>
 <ul>
 <li>Dynamic Rock n Roll Singer</li>
-<li>I am to let you Jive the night away to those classic songs.</li>
+<li>My aim is ... "to let you Jive the night away to the energetic sounds those classic Rock n Roll songs".</li>
+<li>Epic hits by: Chuck Berry, Bill Haley and his Comets, Eddie Cochran, Elvis, Danny and the Juniors, Everley Brothers, Johnny Tillotson, The Pengiuns, Buddy Holly and many more.</li>
+<li>Available for: Birthdays, Fetes, Fayres, Church Events, Parties, Dances, OAP Homes, Care Homes, Hospices, etc...</li>
 <li>I only use professional quality backing tracks</li>
 <li>Based in Tamworth, Staffordshire, UK</li>
-<li>Epic hits by: Chuck Berry, Bill Haley and his Comets, Eddie Cochran, Elvis, Danny and the Juniors, Everley Brothers, Johnny Tillotson, The Pengiuns, Buddy Holly and many more.</li>
-<li>PA Provided</li>
-<li>Available for: Birthdays, Fetes, Fayres, Church Events, Parties, Dances, OAP Homes, Care Homes, Hospices, etc...</li>
+<li>PA Provided for most events</li>
 </ul>
 </div>
 
@@ -59,14 +59,11 @@
 <div id="social">
 <h2>Social Links</h2>
 <ul>
-<li>Facebook: www.facebook.com/AndyBGoode</li>
+<li>Facebook: <a href="www.facebook.com/AndyBGoode"><img id="logo" src="logo01.gif" alt="www.facebook.com/AndyBGoode" height="50px">www.facebook.com/AndyBGoode</a></li>
 <li>Twitter: @AndyBVocalist</li>
 <li>YouTube: https://www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ</li>
 <li>Instagram: https://www.instagram.com/andybgoodevocalist</li>
 </ul>
-<iframe src="https://www.facebook.com/plugins/follow.php?href=https%3A%2F%2Fwww.facebook.com%2FAndyBGoode&width=450&height=80&layout=standard&show_faces=true&appId" width="450" height="80" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
-<a href="https://twitter.com/AndyBVocalist" class="twitter-follow-button" data-show-count="false" data-dnt="true">Follow @AndyBVocalist</a>
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 </div>
 
 </div>
