--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <div id="social">
 <h2>Social Links</h2>
 <ul>
-<li>Facebook: <a href="www.facebook.com/AndyBGoode">www.facebook.com/AndyBGoode</a></li>
+<li>Facebook: <a href="https://www.facebook.com/AndyBGoode">www.facebook.com/AndyBGoode</a></li>
 <li>Twitter: @AndyBVocalist</li>
 <li>YouTube: https://www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ</li>
 <li>Instagram: https://www.instagram.com/andybgoodevocalist</li>
