--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
 
 
 <div id="info">
-<h2>What Do I Do?</h2>
+<h2>What do I do?</h2>
 <ul>
 <li>Dynamic Rock n Roll Singer</li>
 <li>My aim is ... "to let you Jive the night away to the energetic sounds those classic Rock n Roll songs".</li>
-<li>Epic hits by: Chuck Berry, Bill Haley and his Comets, Eddie Cochran, Elvis, Danny and the Juniors, Everley Brothers, Johnny Tillotson, The Pengiuns, Buddy Holly and many more.</li>
-<li>Available for: Birthdays, Fetes, Fayres, Church Events, Parties, Dances, OAP Homes, Care Homes, Hospices, etc...</li>
+<li>Epic hits by: Chuck Berry, Bill Haley and his Comets, Eddie Cochran, Elvis, Danny and the Juniors, Everley Brothers, Johnny Tillotson, The Pengiuns, Buddy Holly, Frank Sinatra, The Platters and many more.</li>
+<li>Available for: Birthdays, Fetes, Fayres, Church Events, Vintage Events Parties, Dances, OAP Homes, Care Homes, Hospices, etc...</li>
 <li>I only use professional quality backing tracks</li>
 <li>Based in Tamworth, Staffordshire, UK</li>
 <li>PA Provided for most events</li>
@@ -50,14 +50,14 @@
 </div>
 
 <div id="gigs">
-<h2>Key Upcoming Public Gigs</h2>
+<h2>Key upcoming public gigs</h2>
 <ul>
 <li>Saturday 11th June 2016 - 2pm - St Pauls Dosthill - Vintage Fayre</li>
 </ul>
 </div>
 
 <div id="social">
-<h2>Social Links</h2>
+<h2>Social links</h2>
 <ul>
 <li>Facebook: <a href="https://www.facebook.com/AndyBGoode">www.facebook.com/AndyBGoode</a></li>
 <li>Twitter: @AndyBVocalist</li>
