--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <div id="main">
 <h1>Andy B Goode</h1>
-<h3>1950s/60s Rock and Roll Vocalist</h3>
+<h3>1950s/60s Rock and Roll Singer</h3>
 <h3>Let me enliven your events with some fun vintage 'Rock n Roll' music.</h3>
 <h3>Get your feet moving on the dance floor to some vintage 'Rock n Roll' classics.</h3>
 
@@ -31,12 +31,12 @@
 <div id="info">
 <h2>What do I do?</h2>
 <ul>
-<li>Dynamic Rock n Roll Singer</li>
-<li>My aim is ... "to let you Jive the night away to the energetic sounds those classic Rock n Roll songs".</li>
+<li>Dynamic Rock n Roll Vocalist</li>
+<li>My aim is ...to let you Jive the night away to the energetic sounds those classic Rock n Roll songs.</li>
 <li>Epic hits by: Chuck Berry, Bill Haley and his Comets, Eddie Cochran, Elvis, Danny and the Juniors, Everley Brothers, Johnny Tillotson, The Pengiuns, Buddy Holly, Frank Sinatra, The Platters and many more.</li>
 <li>Available for: Birthdays, Fetes, Fayres, Church Events, Vintage Events Parties, Dances, OAP Homes, Care Homes, Hospices, etc...</li>
-<li>I only use professional quality backing tracks</li>
-<li>Based in Tamworth, Staffordshire, UK</li>
+<li>I only use high quality backing tracks</li>
+<li>Based in Tamworth, Staffordshire, Midlands, UK</li>
 <li>PA Provided for most events</li>
 </ul>
 </div>
@@ -45,7 +45,7 @@
 <h2>News</h2>
 <ul>
 <li>Discount pricing for 2016 continues.</li>
-<li>I am providing a few free gigs to worthy causes this year (Hospices, Care Homes, etc) so inquire soon if you represent a organisation that may enjoy me entertaining them.</li>
+<li>This year I am giving a few free gigs to worthy causes (Hospices, Care Homes, etc) so inquire soon if you represent a organisation that may enjoy me entertaining them.</li>
 </ul>
 </div>
 
@@ -61,8 +61,8 @@
 <ul>
 <li>Facebook: <a href="https://www.facebook.com/AndyBGoode">www.facebook.com/AndyBGoode</a></li>
 <li>Twitter: @AndyBVocalist</li>
-<li>YouTube: https://www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ</li>
-<li>Instagram: https://www.instagram.com/andybgoodevocalist</li>
+<li>YouTube: <a href="https://www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ">www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ</a></li>
+<li>Instagram: <a href="https://www.instagram.com/andybgoodevocalist">https://www.instagram.com/andybgoodevocalist</a></li>
 </ul>
 </div>
 
