--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 <li>Facebook: <a href="https://www.facebook.com/AndyBGoode">www.facebook.com/AndyBGoode</a></li>
 <li>Twitter: <a href="https://www.twitter.com/AndyBVocalist">www.twitter.com/AndyBVocalist</a></li>
 <li>YouTube: <a href="https://www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ">www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ</a></li>
-<li>Instagram: <a href="https://www.instagram.com/andybgoodevocalist">https://www.instagram.com/andybgoodevocalist</a></li>
+<li>Instagram: <a href="https://www.instagram.com/andybgoodevocalist">www.instagram.com/andybgoodevocalist</a></li>
 </ul>
 </div>
 
