--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
 
 <div id="menu">
 <a href="index.html"><img id="logo" src="logo01.gif" alt="AndyBGoode Logo" height="50px"></a>
+<!--
 <a href="photos.html">Photos</a>
 <a href="music.html">Music</a> 
 <a href="video.html">Videos</a> 
-<a href="contact.html">Contact</a>
 <a href="terms.html">Terms</a>
+-->
 </div>
 
 <div id="main">
@@ -56,8 +57,8 @@
 </ul>
 </div>
 
-<div id="social">
-<h2>Social links</h2>
+<div id="contact">
+<h2>Contact me</h2>
 <ul>
 <li>Facebook: <a href="https://www.facebook.com/AndyBGoode">www.facebook.com/AndyBGoode</a></li>
 <li>Twitter: <a href="https://www.twitter.com/AndyBVocalist">www.twitter.com/AndyBVocalist</a></li>
