--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
 <title>Andy B Goode - Rock and Roll Vocalist</title>
 <link rel="stylesheet" type="text/css" href="style.css"/>
 <meta name="short" content="AndyBGoode 1950s/60 Rock n Roll Entertainer"/>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+  ga('create', 'UA-77123620-1', 'auto');
+
+  ga('send', 'pageview');
+</script>
 </head>
 
 <body>
