--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
  All rights reserved
  -->
 <head>
-<title>Andy B Goode - Rock and Roll Vocalist</title>
+<title>Andy B Goode - Vintage Rock n Roll Singer, Staffordshire, UK</title>
 <link rel="stylesheet" type="text/css" href="style.css"/>
-<meta name="short" content="AndyBGoode 1950s/60 Rock n Roll Entertainer"/>
+<meta name="short" content="AndyBGoode 1950s/60 Rock and Roll Entertainer"/>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
