--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 <div id="news">
 <h2>News</h2>
 <ul>
+<li>First free demo track 'Johnny B. Goode' is now released. Download mp3 <a href="001_-_AndyBGoode_-_Johnny_B_Goode.mp3" download>here</a>. Listen on YouTube <a href="https://www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ">here</a>./li>
 <li>Discount pricing for 2016 continues.</li>
 <li>This year I am giving a few free gigs to worthy causes (Hospices, Care Homes, etc) so inquire soon if you represent a organisation that may enjoy me entertaining them.</li>
 </ul>
