--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 <li>Available for: Birthdays, Fetes, Fayres, Church Events, Vintage Events Parties, Dances, OAP Homes, Care Homes, Hospices, etc...</li>
 <li>I only use high quality backing tracks</li>
 <li>Based in Tamworth, Staffordshire, Midlands, UK</li>
+<li>Fun 'Teddy boy' style outfit</li>
 <li>PA Provided for most events</li>
 </ul>
 </div>
@@ -54,7 +55,7 @@
 <div id="news">
 <h2>News</h2>
 <ul>
-<li>First free demo track 'Johnny B. Goode' is now released. Download mp3 <a href="001_-_AndyBGoode_-_Johnny_B_Goode.mp3" download>here</a>. Listen on YouTube <a href="https://www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ">here</a>./li>
+<li>Exciting new.... First demo track 'Johnny B. Goode' is now released. Download free mp3 here <a href="001_-_AndyBGoode_-_Johnny_B_Goode.mp3" download>Johnny B Goode</a>. Listen on YouTube <a href="https://www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ">here</a>./li>
 <li>Discount pricing for 2016 continues.</li>
 <li>This year I am giving a few free gigs to worthy causes (Hospices, Care Homes, etc) so inquire soon if you represent a organisation that may enjoy me entertaining them.</li>
 </ul>
