--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 <h3>Get your feet moving on the dance floor to some vintage 'Rock n Roll' classics.</h3>
 
 
-<div id="info">
-<h2>What do I do?</h2>
+<div id="what-area">
+<h2 id="what" class="banner">What do I do?</h2>
 <ul>
 <li>Dynamic Rock n Roll Vocalist</li>
 <li>My aim is ...to let you Jive the night away to the energetic sounds those classic Rock n Roll songs.</li>
@@ -52,8 +52,8 @@
 </ul>
 </div>
 
-<div id="news">
-<h2>News</h2>
+<div id="news-area">
+<h2 id="news" class="banner">News</h2>
 <ul>
 <li>Exciting new.... First demo track 'Johnny B. Goode' is now released. Download free mp3 <a href="001_-_AndyBGoode_-_Johnny_B_Goode.mp3" download>Johnny B Goode</a> and Listen on YouTube <a href="https://www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ">here</a>.</li>
 <li>Discount pricing for 2016 continues.</li>
@@ -61,15 +61,15 @@
 </ul>
 </div>
 
-<div id="gigs">
-<h2>Key upcoming public gigs</h2>
+<div id="gigs-area">
+<h2 id="gigs" class="banner">Key upcoming public gigs</h2>
 <ul>
 <li>Saturday 11th June 2016 - 2pm - St Pauls Dosthill - Vintage Fayre</li>
 </ul>
 </div>
 
-<div id="contact">
-<h2>Contact me</h2>
+<div id="contact-area">
+<h2 id="contact" class="banner">Contact me</h2>
 <ul>
 <li>Phone: 07979 536591</li>
 <li>email: Andy@AndyBGoode.com</li>
