--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 <h2 id="news" class="banner">News</h2>
 <ul>
 <li>Exciting new.... First demo track 'Johnny B. Goode' is now released. Download free mp3 <a href="001_-_AndyBGoode_-_Johnny_B_Goode.mp3" download>Johnny B Goode</a> and Listen on YouTube <a href="https://www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ">here</a>.</li>
+<li><a href="001_-_AndyBGoode_-_Johnny_B_Goode.mp3" download><img border="0" alt="Johnny B Goode" src="demojohnnybgoodeart.jpg" width="120" height="120"></a></li>
 <li>Discount pricing for 2016 continues.</li>
 <li>This year I am giving a few free gigs to worthy causes (Hospices, Care Homes, etc) so inquire soon if you represent a organisation that may enjoy me entertaining them.</li>
 </ul>
