--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@ fghjghhj
 <li>Dynamic Rock n Roll Vocalist</li>
 <li>My aim is ...to let you Jive the night away to the energetic sounds those classic Rock n Roll songs.</li>
 <li>Epic hits by: Chuck Berry, Bill Haley and his Comets, Eddie Cochran, Elvis, Danny and the Juniors, Everley Brothers, Johnny Tillotson, The Pengiuns, Buddy Holly, Frank Sinatra, The Platters and many more.</li>
-<li>Available for: Birthdays, Fetes, Fayres, Church Events, Vintage Events Parties, Dances, OAP Homes, Care Homes, Hospices, etc...</li>
-<li>I only use high quality backing tracks</li>
+<li>Available for: Birthdays, Fetes, Fayres, Vintage Events, Parties, Dances, Church Events, OAP Homes, Care Homes, Hospices, etc...</li>
 <li>Based in Tamworth, Staffordshire, Midlands, UK</li>
+<li>I only use high quality backing tracks</li>
 <li>Fun 'Teddy boy' style outfit</li>
 <li>PA Provided for most events</li>
 </ul>
