--- a/index.html
+++ b/index.html
@@ -30,20 +30,19 @@
 -->
 </div>
 
-<div id="tiles-area">
- asssdfsx
- <h1>Andy B Goode</h1>
-fghjghhj
-</div>
+<h1>Andy B Goode</h1>
 
 <div id="main">
+
+<div id="main-area">
 <h3>1950s/60s Rock and Roll Singer</h3>
 <h3>Let me enliven your events with some fun vintage 'Rock n Roll' music.</h3>
 <h3>Get your feet moving on the dance floor to some vintage 'Rock n Roll' classics.</h3>
-
+</div>
 
 <div id="what-area">
 <h2 id="what" class="banner">What do I do?</h2>
+<div class="textbox-area">
 <ul>
 <li>Dynamic Rock n Roll Vocalist</li>
 <li>My aim is ...to let you Jive the night away to the energetic sounds those classic Rock n Roll songs.</li>
@@ -55,7 +54,7 @@ fghjghhj
 <li>PA Provided for most events</li>
 </ul>
 </div>
-
+</div>
 <div id="news-area">
 <h2 id="news" class="banner">News</h2>
 <ul>
