--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <a href="terms.html">Terms</a>
 -->
 </div>
-
+11111
 <h1>Andy B Goode</h1>
 
 <div id="main">
@@ -55,6 +55,7 @@
 </ul>
 </div>
 </div>
+
 <div id="news-area">
 <h2 id="news" class="banner">News</h2>
 <ul>
@@ -64,16 +65,20 @@
 <li>This year I am giving a few free gigs to worthy causes (Hospices, Care Homes, etc) so inquire soon if you represent a organisation that may enjoy me entertaining them.</li>
 </ul>
 </div>
+</div>
 
 <div id="gigs-area">
 <h2 id="gigs" class="banner">Key upcoming public gigs</h2>
+<div class="textbox-area">
 <ul>
 <li>Saturday 11th June 2016 - 2pm - St Pauls Dosthill - Vintage Fayre</li>
 </ul>
 </div>
+</div>
 
 <div id="contact-area">
 <h2 id="contact" class="banner">Contact me</h2>
+<div class="textbox-area">
 <ul>
 <li>Phone: 07979 536591</li>
 <li>email: Andy@AndyBGoode.com</li>
@@ -82,6 +87,7 @@
 <li>YouTube: <a href="https://www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ">www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ</a></li>
 <li>Instagram: <a href="https://www.instagram.com/andybgoodevocalist">www.instagram.com/andybgoodevocalist</a></li>
 </ul>
+</div>
 </div>
 
 </div>
