--- a/index.html
+++ b/index.html
@@ -29,15 +29,17 @@
 <a href="terms.html">Terms</a>
 -->
 </div>
-11111
+22222
 <h1>Andy B Goode</h1>
 
 <div id="main">
 
-<div id="main-area">
+<div id="info-area">
+<div class="textbox-area">
 <h3>1950s/60s Rock and Roll Singer</h3>
 <h3>Let me enliven your events with some fun vintage 'Rock n Roll' music.</h3>
 <h3>Get your feet moving on the dance floor to some vintage 'Rock n Roll' classics.</h3>
+</div>
 </div>
 
 <div id="what-area">
