--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
 <a href="terms.html">Terms</a>
 -->
 </div>
-22222
 <h1>Andy B Goode</h1>
 
 <div id="main">
@@ -60,6 +59,7 @@
 
 <div id="news-area">
 <h2 id="news" class="banner">News</h2>
+<div class="textbox-area">
 <ul>
 <li>Exciting new.... First demo track 'Johnny B. Goode' is now released.</li>
 <li>Download free mp3 <a href="001_-_AndyBGoode_-_Johnny_B_Goode.mp3" download>Johnny B Goode</a> <a href="001_-_AndyBGoode_-_Johnny_B_Goode.mp3" download><img border="0" alt="Johnny B Goode" src="demojohnnybgoodeart.jpg" width="120" height="120"></a>  Listen on YouTube <a href="https://www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ">here</a> <a href="https://www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ"><img border="0" alt="Johnny B Goode" src="demojohnnybgoodeart.jpg" width="120" height="120"></a>.</li>
@@ -88,6 +88,7 @@
 <li>Twitter: <a href="https://www.twitter.com/AndyBVocalist">www.twitter.com/AndyBVocalist</a></li>
 <li>YouTube: <a href="https://www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ">www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ</a></li>
 <li>Instagram: <a href="https://www.instagram.com/andybgoodevocalist">www.instagram.com/andybgoodevocalist</a></li>
+<li>website: v1.0</li>
 </ul>
 </div>
 </div>
