--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <a href="terms.html">Terms</a>
 </div>
 -->
-<h1><img id="logo" src="logo01.gif" alt="AndyBGoode Logo" height="50px"> Andy B Goode</h1>
+<h1><img id="logo" src="logo.gif" alt="AndyBGoode Logo" height="50px"> Andy B Goode</h1>
 
 <div id="main">
 
