--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <h2 id="news" class="banner">News</h2>
 <div class="textbox-area">
 <ul>
-<li>Exciting new.... First demo track 'Johnny B. Goode' is now released.</li>
+<li>Exciting news.... First demo track 'Johnny B. Goode' is now released.</li>
 <li>Download free mp3 <a href="001_-_AndyBGoode_-_Johnny_B_Goode.mp3" download>Johnny B. Goode</a> <a href="001_-_AndyBGoode_-_Johnny_B_Goode.mp3" download><img border="0" alt="Johnny B Goode" src="demojohnnybgoodeart.jpg" width="120" height="120"></a></li>
 <li>Listen on YouTube <a href="https://www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ">Johnny B. Goode</a></li>
 <li>Discount pricing for 2016 continues.</li>
