--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <ul>
 <li>Exciting news.... First demo track 'Johnny B. Goode' is now released.</li>
 <li>Download free mp3 <a href="001_-_AndyBGoode_-_Johnny_B_Goode.mp3" download>Johnny B. Goode</a> <a href="001_-_AndyBGoode_-_Johnny_B_Goode.mp3" download><img border="0" alt="Johnny B Goode" src="demojohnnybgoodeart.jpg" width="120" height="120"></a></li>
-<li>Listen on YouTube <a href="https://www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ">Johnny B. Goode</a></li>
+<li>Listen on YouTube <a href="https://youtu.be/9E8LMdoa5co">Johnny B. Goode</a></li>
 <li>Discount gig pricing for 2016 continues.</li>
 <li>This year I am giving a few free gigs to worthy causes (Hospices, Care Homes, etc) so inquire soon if you represent a organisation that may enjoy me entertaining them.</li>
 </ul>
