--- a/index.html
+++ b/index.html
@@ -7,7 +7,24 @@
 <title>Andy B Goode - Vintage Rock n Roll Singer, Staffordshire, UK</title>
 <link rel="stylesheet" type="text/css" href="style.css"/>
 <meta name="short" content="AndyBGoode 1950s/60 Rock and Roll Entertainer"/>
-<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+
+<link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
+<link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
+<link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
+<link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
+<link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
+<link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
+<link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
+<link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
+<link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/manifest.json">
+<meta name="msapplication-TileColor" content="#ffffff">
+<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+<meta name="theme-color" content="#ffffff">
 <link rel="icon" href="/favicon.ico" type="image/x-icon">
 
 <script>
@@ -64,7 +81,7 @@
 <h2 id="news" class="banner">News</h2>
 <div class="textbox-area">
 <ul>
-<li>Exciting news.... First demo track 'Johnny B. Goode' is now released.</li>
+<li>Exciting news.... My first demo track 'Johnny B. Goode' is now available.</li>
 <li>Download free mp3 <a href="001_-_AndyBGoode_-_Johnny_B_Goode.mp3" download>Johnny B. Goode</a> <a href="001_-_AndyBGoode_-_Johnny_B_Goode.mp3" download><img border="0" alt="Johnny B Goode" src="demojohnnybgoodeart.jpg" width="120" height="120"></a></li>
 <li>Listen on YouTube <a href="https://youtu.be/9E8LMdoa5co">Johnny B. Goode</a></li>
 <li>Discount gig pricing for 2016 continues.</li>
