--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 <li>email: Andy@AndyBGoode.com</li>
 <li>Facebook: <a href="https://www.facebook.com/AndyBGoode">www.facebook.com/AndyBGoode</a></li>
 <li>Twitter: <a href="https://www.twitter.com/AndyBVocalist">www.twitter.com/AndyBVocalist</a></li>
-<li>YouTube: <a href="https://www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ">www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ</a></li>
+<li>YouTube: <a href="https://www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ">Andy B Goode Channel</a></li>
 <li>Instagram: <a href="https://www.instagram.com/andybgoodevocalist">www.instagram.com/andybgoodevocalist</a></li>
 <li>website: v1.0</li>
 </ul>
