--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 <title>Andy B Goode - Vintage Rock n Roll Singer, Staffordshire, UK</title>
 <link rel="stylesheet" type="text/css" href="style.css"/>
 <meta name="short" content="AndyBGoode 1950s/60 Rock and Roll Entertainer"/>
+<meta name="description" content="Andy B Goode 1950s/1960s Rock n Roll Singer based in Tamworth, Staffordshire, England">
+<meta name="author" content="Andrew Britton">
+<meta charset="UTF-8">
+<meta name="keywords" content="AndyBGoode,Andy B Goode,Singer,Vocalist,Tamworth,1950s,1960s,Rock n Roll,Rock and Roll,Entertainment,Vintage">
 
 <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
