--- a/index.html
+++ b/index.html
@@ -59,12 +59,18 @@
 
 <div id="info-area">
 <div class="textbox-area">
-<p><img id="andybgoode" src="andybgoode.jpg" alt="Andy B Goode Headshot" height="250px">
-1950s/60s Rock and Roll Singer<br/>
-Let me enliven your events with some fun vintage 'Rock n Roll' music.
+ <table>
+ <tr>
+ <td><img id="andybgoode" src="andybgoode.jpg" alt="Andy B Goode Headshot" height="250px"></td>
+ <td>
+ <p>
+1950s/60s Rock and Roll Singer..
 </p>
+<h3>Let me enliven your events with some fun vintage 'Rock n Roll' music.</h3>
 <h3>Get your feet moving on the dance floor to some vintage 'Rock n Roll' classics.</h3>
-
+</td>
+</tr>
+</table>
 </div>
 </div>
 
