--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 <h3>Let me enliven your events with some fun vintage 'Rock n Roll' music.</h3>
 <h3>Get your feet moving on the dance floor to some vintage 'Rock n Roll' classics.</h3>
 </td>
-<td><img id="andybgoode" src="andybgoode.jpg" alt="Andy B Goode Headshot" height="150px"></td>
+<td><img id="andybgoode" src="andybgoode.jpg" alt="Andy B Goode Headshot"></td>
 </tr>
 </table>
 </div>
