--- a/index.html
+++ b/index.html
@@ -93,9 +93,10 @@
 <div class="textbox-area">
 <ul>
 <li>Exciting news.... My first two demo tracks 'Johnny B. Goode' and 'Earth Angel' are now available.</li>
-<li>Download free mp3 of <a href="001_-_AndyBGoode_-_Johnny_B_Goode.mp3" download>Johnny B. Goode</a> <a href="001_-_AndyBGoode_-_Johnny_B_Goode.mp3" download><img border="0" alt="Johnny B Goode" src="demojohnnybgoodeart.jpg" width="120" height="120"></a></li>
-<li>Download free mp3 of <a href="002_-_AndyBGoode_-_Earth_Angel.mp3" download>Earth Angel</a> <a href="002_-_AndyBGoode_-_Earth_Angel.mp3" download><img border="0" alt="Earth Angel" src="demoearthangelart.jpg" width="120" height="120"></a></li>
-<li>Listen on YouTube <a href="https://youtu.be/9E8LMdoa5co">Johnny B. Goode</a>  <a href="https://youtu.be/oRQt2_bjvMU">Earth Angel</a></li>
+<li><a href="001_-_AndyBGoode_-_Johnny_B_Goode.mp3" download><img border="0" alt="Johnny B Goode" src="demojohnnybgoodeart.jpg" width="120" height="120"></a> </li>
+<li>Download free mp3 of <a href="001_-_AndyBGoode_-_Johnny_B_Goode.mp3" download>Johnny B. Goode</a></li>
+<li>Download free mp3 of <a href="002_-_AndyBGoode_-_Earth_Angel.mp3" download>Earth Angel</a></li>
+<li>Listen on YouTube <a href="https://youtu.be/9E8LMdoa5co">Johnny B. Goode</a>,  <a href="https://youtu.be/oRQt2_bjvMU">Earth Angel</a></li>
 <li>Discount gig pricing for 2016 continues.</li>
 <li>This year I am giving a few free gigs to worthy causes (Hospices, Care Homes, etc) so inquire soon if you represent a organisation that may enjoy me entertaining them.</li>
 </ul>
