--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
 
 <!--
 <div id="menu">
-<a href="index.html"><img id="logo" src="logo01.gif" alt="AndyBGoode Logo" height="50px"></a>
+<a href="index.html"><img id="logo" src="logo01.gif" alt="AndyBGoode Logo"></a>
 <a href="photos.html">Photos</a>
 <a href="music.html">Music</a> 
 <a href="video.html">Videos</a> 
 <a href="terms.html">Terms</a>
 </div>
 -->
-<h1><img id="logo" src="logo.gif" alt="AndyBGoode Logo" height="50px"> Andy B Goode</h1>
+<h1><img id="logo" src="logo.gif" alt="AndyBGoode Logo"> Andy B Goode</h1>
 
 <div id="main">
 
