--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
   <div itemprop="name">St Paul's Summer Vintage Fayre</div>
   <div itemprop="location.name">St Paul's Church Dosthill</div>
   <div itemprop="location.address">Church Road, Dosthill, Tamworth, Staffordshire. B77 1LU</div>
+  <meta itemprop="location.sameAs">http://stpaulsdosthill.org.uk />
   <meta itemprop="performer.name" content="Andy B Goode"/>
   <meta itemprop="price" content="0"/>
   <meta itemprop="priceCurrency" content="GBP" /> 
