--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
     <meta itemprop="name" content="Andy B Goode"/>
   </div>
   <div itemprop="location" itemscope itemtype="http://schema.org/Place">
+    <meta itemprop="name" content="St. Paul's Church Dosthill"/>
     <meta itemprop="url" content="http://stpaulsdosthill.org.uk/" />
     <div itemprop="address">Church Road, Dosthill, Tamworth, Staffordshire. B77 1LU</div>
   </div>  
