--- a/index.html
+++ b/index.html
@@ -13,6 +13,17 @@
 <meta charset="UTF-8">
 <meta name="keywords" content="AndyBGoode,Andy B Goode,Singer,Vocalist,Tamworth,1950s,1960s,Rock n Roll,Rock and Roll,Entertainment,Vintage">
 
+<div itemscope itemtype="http://schema.org/WebSite">
+  <div itemprop="author" itemscope itemtype="http://schema.org/Person"><meta itemprop="name" content="Andy B Goode"/></div>
+  <div itemprop="accountablePerson" itemscope itemtype="http://schema.org/Person"><meta itemprop="name" content="Andy B Goode"/></div>
+  <meta itemprop="description" content="Andy B Goode is a dynamic 1950s/1960s Rock n Roll/Vintage Singer based in Tamworth Staffordshire England" />
+  <meta itemprop="image" content="http://www.andybgoode.com/andybgoode.png" />
+  <meta itemprop="url" content="http://www.AndyBGoode.com" />
+  <meta itemprop="isFamilyFriendly" content="True" />
+  <meta itemprop="genre" content="Rock n Roll" />
+  <meta itemprop="keywords" content="Andy B Goode, AndyBGoode, Rock n Roll, Rock and Roll, Singer, Entertainer, Tamworth, Staffordshire, England, UK, Vintage, Classic" />
+</div>
+
 <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
 <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
@@ -115,7 +126,7 @@
   <div itemprop="name">St Paul's Summer Vintage Fayre</div>
   <meta itemprop="description" content="St Paul's Summer Vintage Fayre is a great British summer afternoon. Including: Live music, stalls, food, etc..." />
   <meta itemprop="url" content="http://stpaulsdosthill.org.uk/" />
-  <meta itemprop="image" content=" http://www.andybgoode.com/andybgoode.png"/>
+  <meta itemprop="image" content="http://www.andybgoode.com/andybgoode.png"/>
   <div itemprop="performer" itemscope itemtype="http://schema.org/Person">
     <meta itemprop="name" content="Andy B Goode"/>
   </div>
