--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 <li>Listen on YouTube <a href="https://youtu.be/9E8LMdoa5co">Johnny B. Goode</a>,  <a href="https://youtu.be/oRQt2_bjvMU">Earth Angel</a></li>
 <li>Discount gig pricing for 2016 continues.</li>
 <li>This year I am giving a few free gigs to worthy causes (Hospices, Care Homes, etc) so inquire soon if you represent a organisation that may enjoy me entertaining them.</li>
-<li>St Pauls Vintage Summer Fete in Dosthill was a great success. Check out the Photos on Facebook.</li>
+<li>St Pauls Vintage Summer Fete in Dosthill was a great success. Check out the Photos on <a href="https://www.facebook.com/AndyBGoode">Facebook</a>.</li>
 </ul>
 </div>
 </div>
