--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
     <meta itemprop="name" content="Andy B Goode"/>
   </div>
   <div itemprop="location" itemscope itemtype="http://schema.org/Place">
-    <meta itemprop="name" content="Polesworth Sports Centre"/>
+    <div itemprop="name">Polesworth Sports Centre</div>
     <meta itemprop="url" content="http://www.thepolesworthschool.com/" />
     <div itemprop="address">Dordon Road, Dordon, Tamworth, Staffordshire, B78 1QT</div>
   </div>  
