--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
   <div itemprop="name">Norton Juxta Twycross Village Fete Summer Village Fete</div>
   <div itemprop="description">The Norton Juxta Twycross Village Fete Summer Village Fete is a great British summer afternoon.
   <BR/>Including: Live music from Andy B Goode, barbecue, cream teas, coconut shy, skittles competition, vintage steam engine, bouncy castle, Gopsall delicious home made ice cream, several displays, trade stalls and annual dog show.
-  <BR/>The top local radio station TCR FM will also be there, so go to <a href="https://www.tcrfm.co.uk">www.tcrfm.co.uk</a> and listen along if you cant be there.</div>
+  <BR/>The top local radio station TCR FM will also be there, so go to <a href="http://www.tcrfm.co.uk">www.tcrfm.co.uk</a> and listen along if you cant be there.</div>
   <meta itemprop="url" content="http://www.nortonjuxtatwycross.co.uk/village-events/81-norton-village-fete" />
   <meta itemprop="image" content="http://www.andybgoode.com/andybgoode.png"/>
   <div itemprop="performer" itemscope itemtype="http://schema.org/Person">
@@ -173,7 +173,7 @@
 <li>Phone: 07979 536591</li>
 <li>email: Andy@AndyBGoode.com</li>
 <li>Facebook: <a href="https://www.facebook.com/AndyBGoode">www.facebook.com/AndyBGoode</a></li>
-<li>Twitter: <a href="https://www.twitter.com/AndyBVocalist">www.twitter.com/AndyBVocalist</a></li>
+<li>Twitter: <a href="http://www.twitter.com/AndyBVocalist">www.twitter.com/AndyBVocalist</a></li>
 <li>YouTube: <a href="https://www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ">Andy B Goode Channel</a></li>
 <li>Instagram: <a href="https://www.instagram.com/andybgoodevocalist">www.instagram.com/andybgoodevocalist</a></li>
 <li>website: v1.0</li>
