--- a/index.html
+++ b/index.html
@@ -13,24 +13,24 @@
 <meta charset="UTF-8">
 <meta name="keywords" content="AndyBGoode,Andy B Goode,Singer,Vocalist,Tamworth,1950s,1960s,Rock n Roll,Rock and Roll,Entertainment,Vintage">
 
-<link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
-<link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
-<link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
-<link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
-<link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
-<link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
-<link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
-<link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
-<link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="apple-touch-icon" sizes="57x57" href="/images/apple-icon-57x57.png">
+<link rel="apple-touch-icon" sizes="60x60" href="/images/apple-icon-60x60.png">
+<link rel="apple-touch-icon" sizes="72x72" href="/images/apple-icon-72x72.png">
+<link rel="apple-touch-icon" sizes="76x76" href="/images/apple-icon-76x76.png">
+<link rel="apple-touch-icon" sizes="114x114" href="/images/apple-icon-114x114.png">
+<link rel="apple-touch-icon" sizes="120x120" href="/images/apple-icon-120x120.png">
+<link rel="apple-touch-icon" sizes="144x144" href="/images/apple-icon-144x144.png">
+<link rel="apple-touch-icon" sizes="152x152" href="/images/apple-icon-152x152.png">
+<link rel="apple-touch-icon" sizes="180x180" href="/images/apple-icon-180x180.png">
+<link rel="icon" type="image/png" sizes="192x192"  href="/images/android-icon-192x192.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="96x96" href="/images/favicon-96x96.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
 <link rel="manifest" href="/manifest.json">
 <meta name="msapplication-TileColor" content="#ffffff">
 <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
 <meta name="theme-color" content="#ffffff">
-<link rel="icon" href="/favicon.ico" type="image/x-icon">
+<link rel="icon" href="/images/favicon.ico" type="image/x-icon">
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -48,7 +48,7 @@
   <div itemprop="author" itemscope itemtype="http://schema.org/Person"><meta itemprop="name" content="Andy B Goode"/></div>
   <div itemprop="accountablePerson" itemscope itemtype="http://schema.org/Person"><meta itemprop="name" content="Andy B Goode"/></div>
   <meta itemprop="description" content="Andy B Goode is a dynamic 1950s/1960s Rock n Roll/Vintage Singer based in Tamworth Staffordshire England" />
-  <meta itemprop="image" content="http://www.andybgoode.com/andybgoode.png" />
+  <meta itemprop="image" content="http://www.andybgoode.com/images/andybgoode.png" />
   <meta itemprop="url" content="http://www.AndyBGoode.com" />
   <meta itemprop="isFamilyFriendly" content="True" />
   <meta itemprop="genre" content="Rock n Roll" />
@@ -58,14 +58,14 @@
 
 <!--
 <div id="menu">
-<a href="index.html"><img id="logo" src="logo01.gif" alt="AndyBGoode Logo"></a>
+<a href="index.html"><img id="logo" src="images/logo01.gif" alt="AndyBGoode Logo"></a>
 <a href="photos.html">Photos</a>
 <a href="music.html">Music</a> 
 <a href="video.html">Videos</a> 
 <a href="terms.html">Terms</a>
 </div>
 -->
-<h1><img id="logo" src="logo.gif" alt="AndyBGoode Logo"> Andy B Goode</h1>
+<h1><img id="logo" src="images/logo.gif" alt="AndyBGoode Logo"> Andy B Goode</h1>
 
 <div id="main">
 
@@ -78,7 +78,7 @@
 <h3>Let me enliven your events with some fun vintage 'Rock n Roll' music.</h3>
 <h3>Get your feet moving on the dance floor to some vintage 'Rock n Roll' classics.</h3>
 </td>
-<td><img id="andybgoode" src="andybgoode.png" alt="Andy B Goode Headshot"></td>
+<td><img id="andybgoode" src="images/andybgoode.png" alt="Andy B Goode Headshot"></td>
 </tr>
 </table>
 </div>
@@ -106,7 +106,7 @@
 <div class="textbox-area">
 <ul>
 <li>Exciting news.... My first two demo tracks 'Johnny B. Goode' and 'Earth Angel' are now available.</li>
-<li><a href="001_-_AndyBGoode_-_Johnny_B_Goode.mp3" download><img alt="Johnny B Goode" src="demojohnnybgoodeart.jpg" width="120" height="120"></a> <a href="002_-_AndyBGoode_-_Earth_Angel.mp3" download><img alt="Earth Angel" src="demoearthangelart.jpg" width="120" height="120"></a></li>
+<li><a href="001_-_AndyBGoode_-_Johnny_B_Goode.mp3" download><img alt="Johnny B Goode" src="images/demojohnnybgoodeart.jpg" width="120" height="120"></a> <a href="002_-_AndyBGoode_-_Earth_Angel.mp3" download><img alt="Earth Angel" src="images/demoearthangelart.jpg" width="120" height="120"></a></li>
 <li>Download free mp3 of <a href="001_-_AndyBGoode_-_Johnny_B_Goode.mp3" download>Johnny B. Goode</a></li>
 <li>Download free mp3 of <a href="002_-_AndyBGoode_-_Earth_Angel.mp3" download>Earth Angel</a></li>
 <li>Listen on YouTube <a href="https://youtu.be/9E8LMdoa5co">Johnny B. Goode</a>,  <a href="https://youtu.be/oRQt2_bjvMU">Earth Angel</a></li>
@@ -130,7 +130,7 @@
   <BR/>Including: Live music from Andy B Goode, barbecue, cream teas, coconut shy, skittles competition, vintage steam engine, bouncy castle, Gopsall delicious home made ice cream, several displays, trade stalls and annual dog show.
   <BR/>The top local radio station TCR FM will also be there, so go to <a href="http://www.tcrfm.co.uk">www.tcrfm.co.uk</a> and listen along if you cant be there.</div>
   <meta itemprop="url" content="http://www.nortonjuxtatwycross.co.uk/village-events/81-norton-village-fete" />
-  <meta itemprop="image" content="http://www.andybgoode.com/andybgoode.png"/>
+  <meta itemprop="image" content="http://www.andybgoode.com/images/andybgoode.png"/>
   <div itemprop="performer" itemscope itemtype="http://schema.org/Person">
     <meta itemprop="name" content="Andy B Goode"/>
   </div>
@@ -149,7 +149,7 @@
   <div itemprop="name">Warwickshire and Antique Fayre</div>
   <div itemprop="description">The Warwickshire and Antique and Collectors Fayre at Polesworth is a popular day out including Live music from Andy B Goode, vintage dresses, collectables, refreshments and much more.</div>
   <meta itemprop="url" content="https://www.facebook.com/WarwickshireFayre/" />
-  <meta itemprop="image" content="http://www.andybgoode.com/andybgoode.png"/>
+  <meta itemprop="image" content="http://www.andybgoode.com/images/andybgoode.png"/>
   <div itemprop="performer" itemscope itemtype="http://schema.org/Person">
     <meta itemprop="name" content="Andy B Goode"/>
   </div>
@@ -176,7 +176,7 @@
 <li>Twitter: <a href="http://www.twitter.com/AndyBVocalist">www.twitter.com/AndyBVocalist</a></li>
 <li>YouTube: <a href="https://www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ">Andy B Goode Channel</a></li>
 <li>Instagram: <a href="https://www.instagram.com/andybgoodevocalist">www.instagram.com/andybgoodevocalist</a></li>
-<li>website: v1.0</li>
+<li>website: v2.0</li>
 </ul>
 </div>
 </div>
