--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 <li>Download free mp3 of <a href="/media/002_-_AndyBGoode_-_Earth_Angel.mp3" download>Earth Angel</a></li>
 <li>Listen on YouTube <a href="https://youtu.be/9E8LMdoa5co">Johnny B. Goode</a>,  <a href="https://youtu.be/oRQt2_bjvMU">Earth Angel</a></li>
 <li>Discount gig pricing for 2016 continues.</li>
-<li>This year I am giving a few free gigs to worthy causes (Hospices, Care Homes, etc) so inquire soon if you represent a organisation that may enjoy me entertaining them.</li>
+<li>This year I am giving a few free gigs to worthy causes (Hospices, Charities, etc) so inquire soon if you represent a organisation that may enjoy me entertaining them.</li>
 <li>St Pauls Vintage Summer Fete in Dosthill was a great success. Check out the Photos on <a href="https://www.facebook.com/AndyBGoode">Facebook</a>.</li>
 </ul>
 </div>
@@ -176,7 +176,7 @@
 <li>Twitter: <a href="http://www.twitter.com/AndyBVocalist">www.twitter.com/AndyBVocalist</a></li>
 <li>YouTube: <a href="https://www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ">Andy B Goode Channel</a></li>
 <li>Instagram: <a href="https://www.instagram.com/andybgoodevocalist">www.instagram.com/andybgoodevocalist</a></li>
-<li>website: v2.0</li>
+<li>website: v2.0.1</li>
 </ul>
 </div>
 </div>
