--- a/photos.html
+++ b/photos.html
@@ -28,7 +28,7 @@
 <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
 <link rel="manifest" href="/manifest.json">
 <meta name="msapplication-TileColor" content="#ffffff">
-<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+<meta name="msapplication-TileImage" content="/images/ms-icon-144x144.png">
 <meta name="theme-color" content="#ffffff">
 <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
 
@@ -74,30 +74,31 @@
 
 
 <div id="info-area"><div class="textbox-area">
-<h3>Here's a small selection a photos from previous gigs.</h3>
-<h3>If you have have any great photos from my gigs, please do send me a link to them.</h3>
+<h3>Here's a small selection of photos from previous gigs.</h3>
 </div></div>
 
 
 
 <div id="photos-highres-area">
-<h2 id="photos" class="banner">Photos (Publicity Quality)</h2>
+<h2 id="photos" class="banner">Press Photos</h2>
 <div class="textbox-area">
-Click on a photo to access high quality versions (for publicity purposes).
+Click on a photo to download high quality version (for publicity purposes).
 <br/>Please feel free to use these photos for press/reviews/adverts/etc.. just include "Andy B Goode" and a link to this website or the my facebook page.<br/>
+
+
 
 <table class="phototable">
 <tr>
-<td class="phototablecell"><img src="images/andybgoode.jpg" class="photo" id="photo0001" alt="AndyBGoode Flyer"></td>
-<td class="phototablecell"><img src="images/andybgoode.jpg" class="photo" id="photo0002" alt="AndyBGoode Flyer"></td>
-<td class="phototablecell"><img src="images/andybgoode.jpg" class="photo" id="photo0003" alt="AndyBGoode Flyer"></td>
-<td class="phototablecell"><img src="images/andybgoode.jpg" class="photo" id="photo0004" alt="AndyBGoode Flyer"></td>
+<td class="phototablecell"><a href="images/andybgoode.jpg"download><img src="images/andybgoode.jpg" class="photo" alt="Click to download high quality version" ></a></td>
+<td class="phototablecell"><a href="images/andybgoode.jpg" download><img src="images/andybgoode.jpg" class="photo" alt="Click to download high quality version" ></a></td>
+<td class="phototablecell"><a href="images/andybgoode.jpg" download><img src="images/andybgoode.jpg" class="photo" alt="Click to download high quality version" ></a></td>
+<td class="phototablecell"><a href="images/andybgoode.jpg" download><img src="images/andybgoode.jpg" class="photo" alt="Click to download high quality version" ></a></td>
 </tr>
 <tr>
-<td class="phototext">Andy B Goode Flyer</td>
-<td class="phototext">Andy B Goode Flyer background image (with no text)</td>
-<td class="phototext">Microphone</td>
-<td class="phototext">Full length Shot</td>
+<td class="phototext">Andy B Goode Flyer 1 (HIGH RESOLUTION)</td>
+<td class="phototext">Andy B Goode Flyer background image (with no text) 2 (HIGH RESOLUTION)</td>
+<td class="phototext">Microphone 3 (HIGH RESOLUTION)</td>
+<td class="phototext">Full length Shot 4 (HIGH RESOLUTION)</td>
 </tr>
 </table>
 </div>
@@ -106,8 +107,8 @@ Click on a photo to access high quality versions (for publicity purposes).
 <div id="photos-area">
 <h2 id="photos" class="banner">Photos</h2>
 <div class="textbox-area">
-Click on a photo to access higher quality versions.<br/>
 Please check out my facebook page for very recent photos <a href="https://www.facebook.com/AndyBGoode">www.facebook.com/AndyBGoode</a><br/>
+If you have have any great photos from my gigs, please do send me a link to them.<br/>
 
 <table class="phototable">
 
